[backend] fix swagger and config file
